--- a/MultiLanguage/languages/RU/dictionaries/_NPC.json
+++ b/MultiLanguage/languages/RU/dictionaries/_NPC.json
@@ -28,48 +28,65 @@
   "I have here a rare item from the sea. Use it to ask for someone's hand in marriage. It's yours for 5000g.": "У меня есть редкая морская вещица. Используйте её, чтобы просить чьей-то руки. Она ваша всего за 5000g.",
   "!!! Is... is that a 'Club Card'?": "!!! Неужели... это 'Клубная карта'?",
   "That's right. Now step aside, blockhead.": "Это верно. А теперь уйди в сторону, болван.^Это верно. А теперь уйди в сторону, глупая.",
-  "Did you know that my @key": "Знаешь ли ты, что мой @key",
-  "Did you know that @key": "Знаешь ли ты, что @key",
-  "@key loves '@key'! He told me.": "@key любит '@key'! Он говорил мне.",
-  "@key loves '@key'! She told me.": "@key любит '@key'! Она говорила мне.",
-  "Here's a secret. @key loves '@key'.": "Вот тебе секрет. @key любит '@key'.",
-  "If you want @key to like you, give him '@key'.": "Если хочешь понравиться @keyD, дай ему '@key'.",
-  "If you want @key to like you, give her '@key'.": "Если хочешь понравиться @keyD, дай ей '@key'.",
-  "If you want to get on @key's good side, give him '@key'.": "Если хочешь попасть в хороший список к @keyD, дай ему '@key'.",
-  "If you want to get on @key's good side, give her '@key'.": "Если хочешь попасть в хороший список к @keyD, дай ей '@key'.",
-  "If you want to make friends with @key, you can't go wrong with '@key'.": "Если ты хочешь подружиться с @key, ты не ошибешься если подаришь '@key'.",
-  "It's his favorite.": "Это его любимое.",
-  "It's her favorite.": "Это её любимое.",
-  "He loves it.": "Он любит это.",
-  "He loves that stuff.": "Он любит такие вещи.",
-  "She loves it.": "Она любит это.",
-  "She loves that stuff.": "Она любит такие вещи.",
-  "I gave it to him one year and he wouldn't stop talking about it.": "Я в какой-то год подарил ему это и он говорил об этом не переставая.",
-  "I gave it to her one year and she wouldn't stop talking about it.": "Я в какой-то год подарил ей это и она говорила об этом не переставая.",
-  "It would make a great gift.": "Получился бы отличный подарок.",
-  "You could really make him happy with that.": "Ты действительно мог бы порадовать его этим.^Ты действительно могла бы порадовать его этим.",
-  "You could really make her happy with that.": "Ты действительно мог бы порадовать её этим^Ты действительно могла бы порадовать её этим.",
-  "Abigail loves '@key'. She keeps a box of it under her bed. Weird, huh?": "Эбигейл обожает '@key'. Она держит целую коробку у себя под кроватью. Странно, правда?",
-  "hates '@key'? He finds it absolutely @key.": "ненавидит '@key'? Он считает это абсолютно @key.",
-  "hates '@key'? She finds it absolutely @key.": "ненавидит '@key'? Она считает это абсолютно @key.",
-  "@key really hates '@key'! He told me.": "@key ненавидит  '@key'! Он сказал мне.",
-  "@key really hates '@key'! She told me.": "@key ненавидит '@key'! Она сказала мне.",
-  "A word of warning. @key really hates '@key'.": "Предупреждаю. @key ненавидит '@key'.",
-  "@key really hates '@key'.": "@key ненавидит '@key'!",
-  "If you want @key to dislike you, give him '@key'. He hates it with a passion.": "Если ты хочешь, чтобы @key недолюбливал тебя, дай ему '@key'. Он ненавидит это.",
-  "If you want @key to dislike you, give her '@key'. She hates it with a passion.": "Если ты хочешь, чтобы @key недолюбливала тебя, дай ей '@key'. Она ненавидит это.",
-  "If you want @key to dislike you, give him '@key'. He hates that stuff with a passion.": "Если ты хочешь, чтобы @key недолюбливал тебя, дай ему '@key'. Он ненавидит эту вещь.",
-  "If you want @key to dislike you, give her '@key'. She hates that stuff with a passion.": "Если ты хочешь, чтобы @key недолюбливала тебя, дай ей '@key'. Она ненавидит эту вещь.",
-  "If you want to play a cruel joke on @key, give him '@key'. He might not forgive you, though.": "Если хочешь жестоко пошутить над @keyT, дай ему '@key'. Но он может тебя не простить за это.",
-  "If you want to play a cruel joke on @key, give her '@key'. She might not forgive you, though.": "Если хочешь жестоко пошутить над @keyT, дай её '@key'. Но она может тебя не простить за это.",
-  "I learned that one the hard way.": "Я узнал об этом на горьком опыте.",
-  "I'm not sure why.": "Я не знаю почему.",
-  "Just the thought of it can make him depressed.": "Даже мысль об этом может ввести его в депрессию.",
-  "Just the thought of it can make her depressed.": "Даже мысль об этом может ввести её в депрессию",
-  "I think he might be allergic.": "Я думаю, у него может быть аллергия на это.",
-  "I think she might be allergic.": "Я думаю, у неё может быть аллергия на это.",
-  "I guess everyone has their hang-ups.": "Наверное у каждого есть свои бзики.",
+  "__comment": "updateDialogue()",
+  "Did you know that @key hates '@key'? He finds it absolutely @key.": "Знаешь ли ты, что @key ненавидит '@key'? Он находит это совершенно @key.",
+  "Did you know that @key hates '@key'? She finds it absolutely @key.": "Знаешь ли ты, что @key ненавидит '@key'? Она находит это совершенно @key.",
+  "Did you know that my @key hates '@key'? He finds it absolutely @key.": "Знаешь ли ты, что мой @key ненавидит '@key'? Он находит это совершенно @key.",
+  "Did you know that my @key hates '@key'? She finds it absolutely @key.": "Знаешь ли ты, что моя @key ненавидит '@key'? Она находит это совершенно @key.",
+  "My @key really hates '@key'. @key.": "@key действительно ненавидит '@key'. @key.",
+  "@key really hates '@key'. @key.": "@key действительно ненавидит '@key'. @key.",
+  "A word of warning. my @key really hates '@key'. @key.": "Небольшое предупреждение. @key действительно ненавидит '@key'. @key.",
+  "A word of warning. @key really hates '@key'. @key.": "Небольшое предупреждение. @key действительно ненавидит '@key'. @key.",
+  "If you want @key to dislike you, give him '@key'. He hates it with a passion. @key.": "Если ты хочешь, чтобы @key недолюбливал тебя, подари ему '@key'. Он это страстно ненавидит. @key.",
+  "If you want my @key to dislike you, give him '@key'. He hates it with a passion. @key.": "Если ты хочешь, чтобы мой @key недолюбливал тебя, подари ему '@key'. Он это страстно ненавидит. @key.",
+  "If you want @key to dislike you, give him '@key'. He hates that stuff with a passion. @key.": "Если ты хочешь, чтобы @key недолюбливал тебя, подари ему '@key'. Он это страстно ненавидит. @key.",
+  "If you want my @key to dislike you, give him '@key'. He hates that stuff with a passion. @key.": "Если ты хочешь, чтобы мой @key недолюбливал тебя, подари ему '@key'. Он это страстно ненавидит. @key.",
+  "If you want @key to dislike you, give her '@key'. She hates it with a passion. @key.": "Если ты хочешь, чтобы @key недолюбливала тебя, подари ей '@key'. Она это страстно ненавидит. @key.",
+  "If you want my @key to dislike you, give her '@key'. She hates it with a passion. @key.": "Если ты хочешь, чтобы моя @key недолюбливала тебя, подари ей '@key'. Она это страстно ненавидит. @key.",
+  "If you want @key to dislike you, give her '@key'. She hates that stuff with a passion. @key.": "Если ты хочешь, чтобы @key недолюбливала тебя, подари ей '@key'. Она это страстно ненавидит. @key.",
+  "If you want my @key to dislike you, give her '@key'. She hates that stuff with a passion. @key.": "Если ты хочешь, чтобы моя @key недолюбливала тебя, подари ей '@key'. Она это страстно ненавидит. @key.",
+  "If you want to play a cruel joke on @key, give him '@key'. He might not forgive you, though. @key.": "Если хочешь жестоко пошутить над @keyT, дай ему '@key'. Но он может тебя не простить за это. @key.",
+  "If you want to play a cruel joke on my @key, give him '@key'. He might not forgive you, though. @key.": "Если хочешь жестоко пошутить над моим @keyT, дай ему '@key'. Но он может тебя не простить за это. @key.",
+  "If you want to play a cruel joke on @key, give her '@key'. She might not forgive you, though. @key.": "Если хочешь жестоко пошутить над @keyT, дай ей '@key'. Но она может тебя не простить за это. @key.",
+  "If you want to play a cruel joke on my @key, give her '@key'. She might not forgive you, though. @key.": "Если хочешь жестоко пошутить над моей @keyT, дай ей '@key'. Но она может тебя не простить за это. @key.",
+  "I learned that one the hard way": "Я узнал об этом на горьком опыте",
+  "I'm not sure why": "Я не знаю почему",
+  "Just the thought of it can make him depressed": "Даже мысль об этом может ввести его в депрессию",
+  "Just the thought of it can make her depressed": "Даже мысль об этом может ввести её в депрессию",
+  "I think he might be allergic": "Я думаю, у него может быть аллергия на это",
+  "I think she might be allergic": "Я думаю, у неё может быть аллергия на это",
+  "I guess everyone has their hang-ups": "Наверное, у каждого есть свои бзики",
   "@key hates '@key'. You don't want to know the details. Trust me.": "@key ненавидит '@key'. Ты не хочешь знать всех деталей. Просто поверь на слово.",
+  "@key really hates '@key'! He told me.": "@key ненавидит '@key'! Он сам мне сказал.",
+  "Did you know that @key loves '@key'?": "Знаешь ли ты, что @key обожает '@key'?",
+  "Did you know that my @key loves '@key'?": "Знаешь ли ты, что @key обожает '@key'?",
+  "Here's a secret. @key loves '@key'. @key.": "Вот тебе секрет. @key любит '@key'. @key.",
+  "Here's a secret. my @key loves '@key'. @key.": "Вот тебе секрет. @key любит '@key'. @key.",
+  "If you want @key to like you, give him '@key'. @key.": "Если хочешь понравиться @keyD, дай ему '@key'. @key.",
+  "If you want my @key to like you, give him '@key'. @key.": "Если хочешь понравиться моему @keyD, дай ему '@key'. @key.",
+  "If you want @key to like you, give her '@key'. @key.": "Если хочешь понравиться @keyD, дай ей '@key'.",
+  "If you want my @key to like you, give her '@key'. @key.": "Если хочешь понравиться моей @keyD, дай ей '@key'.",
+  "If you want to get on @key's good side, give him '@key'. @key.": "Если хочешь получить хорошее расположение у @keyR, подари ему '@key'. @key.",
+  "If you want to get on my @key's good side, give him '@key'. @key.": "Если хочешь получить хорошее расположение у моего @keyR, подари ему '@key'. @key.",
+  "If you want to get on @key's good side, give her '@key'. @key.": "Если хочешь получить хорошее расположение у @keyR, подари ей '@key'. @key.",
+  "If you want to get on my @key's good side, give her '@key'. @key.": "Если хочешь получить хорошее расположение у моей @keyR, подари ей '@key'. @key.",
+  "If you want to make friends with @key, you can't go wrong with '@key'. @key.": "Если ты хочешь подружиться с @keyT, ты не ошибешься если подаришь '@key'. @key.",
+  "If you want to make friends with my @key, you can't go wrong with '@key'. @key.": "Если ты хочешь подружиться с @keyT, ты не ошибешься если подаришь '@key'. @key.",
+  "It's his favorite": "Это его любимое",
+  "It's her favorite": "Это её любимое",
+  "He loves it": "Он любит это",
+  "She loves it": "Она любит это",
+  "He loves that stuff": "Он любит такие вещи",
+  "She loves that stuff": "Она любит такие вещи",
+  "I gave it to him one year and he wouldn't stop talking about it": "Я в один год селал|сделала ему такой подарок и он говорил об этом не переставая",
+  "I gave it to her one year and she wouldn't stop talking about it": "Я в один год селал|сделала ей такой подарок и она говорил об этом не переставая",
+  "It would make a great gift": "Получился бы отличный подарок",
+  "You could really make him happy with that": "Ты действительно мог бы порадовать его этим.^Ты действительно могла бы порадовать его этим.",
+  "You could really make her happy with that": "Ты действительно мог бы порадовать её этим.^Ты действительно могла бы порадовать её этим.",
+  "Abigail loves '@key'. She keeps a box of it under her bed. Weird, huh?": "Эбигейл обожает '@key'. Она держит целую коробку у себя под кроватью. Странно, правда?",
+  "@key loves '@key'! He told me.": "@key обожает '@key'! Он сказал мне.",
+  "@key loves '@key'! She told me.": "@key обожает '@key'! Она сказал мне.",
+  "@key really hates '@key'! She told me.": "@key ненавидит '@key'! Она сама мне сказала.",
   "It's for members only, kid. Now Scram.": "Это только для членов, парень. Вали отсюда.^Это только для членов, малышка. Вали отсюда.",
   "You remembered my birthday? I'm impressed. Thanks.": "Ты помнишь мой день рождения? Я впечатлен|впечатлена. Спасибо.",
   "A birthday gift? That's very kind of you! I love it.": "Подарок на день рождения?? Очень любезно с твоей стороны! Мне нравится.",
@@ -92,7 +109,7 @@
   "*sigh*... my skin looks horrible today.": "*вздох* ...Моя кожа сегодня ужасно выглядит.",
   "*sigh*... my hair looks horrible today.": "*вздох* У меня сегодня жуткая причёска...",
   "It does... I can tell by the way you're looking at me.": "Это правда... Я могу это определить по тому, как ты на меня смотришь.",
-  "Don't you ever feel trapped?": "Никогда не чувствовал себя как в ловушке?^Никогда не чувствовала себя как в ловушке?^",
+  "Don't you ever feel trapped?": "Никогда не чувствовал себя как в ловушке?^Никогда не чувствовала себя как в ловушке?",
   "*grumble*... chores...": "*ворчание*... хлопоты...",
   "Don't you have work to do?": "Тебе разве нечем заняться?",
   "Nghh... what is it? I'm trying to sleep.": "Нгхх... ну что еще? Я вообще-то пытаюсь уснуть.",
